Add ReceivedAmount grpc command.
It depends on GetAddressTotalAmount implemented in btcwallet
